  * Disable use of non-free triangle source.
  * Fix bash-completion installation.
  * Strip RPATH from binary & libraries.
  * Also exclude prebuilt documentation and manpages from repacked source.
  * Build documentation in build-indep target.
  * Use packaged jquery.js & underscore.js instead of embedded sphinx copies.
  * Move /usr/share/gmt to architecture-independent gmt-common package.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 07 Jun 2015 12:06:29 +0200

gmt (4.5.12-1) unstable; urgency=medium

  * New upstream release for 4.x series, bug fixing only.
  * Now using unversioned paths for installing the octave files.
    Thanks Rafael Laboissiere (closes: #734047).
  * Policy set to 3.9.5, no changes done.
  * Set debhelper to level 9 for both -arch and -indep sections.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 20 Mar 2014 10:34:32 +0100

gmt (4.5.11-1) unstable; urgency=low

  * New upstream release for the 4.x series.
  * Added patch gmt_io.c, mgd77header.c and gmt_proj.c to avoid nested comments 
    use while -pedantic mode is enabled.
  * Added patch c++comments to remove C++ style comments in pure C code. This
    is currently deprecated and should be avoided when strict option 
    like -pedantic are used.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 25 Nov 2013 15:57:54 +0100

gmt (4.5.9-1) unstable; urgency=low

  * Added Octave support and an ad-hoc new package for that.
  * Added octave-gmt package for supporting grid files in GNU octave.
  * Revised build-deps.
  * Debhelper level set to 9.
  * Lintian-based cleanups:
      - Fixed debian/changelog for a couple of silly warnings.
      - Added ${misc:Depends} to all pkgs.
  * Revised for Suggestions.
  * Fixed previous changelog for layout and contents.
  * ACK of previous NMUi by Sebastian Ramacher:
  	* debian/patches/eglibc-2.17.patch: Add missing include to fix FTBFS with
      eglibc 2.17. 
    (closes: #701431)
  * New upstream release. 