@@ -39,6 +39,7 @@ gmt (5.1.2+dfsg1-1) UNRELEASED; urgency=medium
   * Build documentation in build-indep target.
   * Use packaged jquery.js & underscore.js instead of embedded sphinx copies.
   * Move /usr/share/gmt to architecture-independent gmt-common package.
+  * Recompress the manpages to not use timestamped gzip.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sun, 07 Jun 2015 12:06:29 +0200
 
